--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: elixir
 elixir:
-  - 1.0
   - 1.1
   - 1.2
   - 1.3
@@ -9,3 +8,7 @@ otp_release:
   - 17.5
   - 18.1
   - 19.0
+matrix:
+  exclude:
+    - elixir: 1.1
+    - opt_release: 19.0
