--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ otp_release:
   - 19.0
   - 20.3
 script: MIX_ENV=test mix quality
+matrix:
+  exclude:
+    - elixir: 1.3
+      otp_release: 20.3
