--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,14 @@ elixir:
   - 1.3
   - 1.4
   - 1.5
+  - 1.6
 sudo: false
 otp_release:
   - 18.1
   - 19.0
+  - 20.3
 script: MIX_ENV=test mix quality
+matrix:
+  exclude:
+    - elixir: 1.3
+      otp_release: 20.3
