--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,45 @@ otp_release:
   - 22.0
 script: MIX_ENV=test mix quality
 matrix:
-  exclude:
+  # Compatible versions are taken from
+  # https://hexdocs.pm/elixir/compatibility-and-deprecations.html#compatibility-between-elixir-and-erlang-otp
+  include:
     - elixir: 1.4
+      otp_release: 18.1
+    - elixir: 1.4
+      otp_release: 19.0
+
+    - elixir: 1.5
+      otp_release: 18.1
+    - elixir: 1.5
+      otp_release: 19.0
+    - elixir: 1.5
+      otp_release: 20.3
+
+    - elixir: 1.6
+      otp_release: 19.0
+    - elixir: 1.6
+      otp_release: 20.3
+
+    - elixir: 1.7
+      otp_release: 19.0
+    - elixir: 1.7
+      otp_release: 20.3
+    - elixir: 1.7
       otp_release: 21.3
-    - elixir: 1.4
+    - elixir: 1.7
       otp_release: 22.0
-    - elixir: 1.5
+
+    - elixir: 1.8
+      otp_release: 20.3
+    - elixir: 1.8
       otp_release: 21.3
-    - elixir: 1.5
+    - elixir: 1.8
+      otp_release: 22.0
+
+    - elixir: 1.9
+      otp_release: 20.3
+    - elixir: 1.9
+      otp_release: 21.3
+    - elixir: 1.9
       otp_release: 22.0
