Only specify the exact combinations of configurations in Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,5 @@
 language: elixir
-elixir:
-  - 1.4
-  - 1.5
-  - 1.6
-  - 1.7
-  - 1.8
-  - 1.9
 sudo: false
-otp_release:
-  - 18.1
-  - 19.0
-  - 20.3
-  - 21.3
-  - 22.0
 script: MIX_ENV=test mix quality
 matrix:
   # Compatible versions are taken from
@@ -22,6 +9,8 @@ matrix:
       otp_release: 18.1
     - elixir: 1.4
       otp_release: 19.0
+    - elixir: 1.4
+      otp_release: 20.3
 
     - elixir: 1.5
       otp_release: 18.1
@@ -34,6 +23,8 @@ matrix:
       otp_release: 19.0
     - elixir: 1.6
       otp_release: 20.3
+    - elixir: 1.6
+      otp_release: 21.3
 
     - elixir: 1.7
       otp_release: 19.0
